# gigman

./: .gitignore  Pipfile  README.md  build  deploy.md  pyproject.toml  requirements.txt  run  test  upload  upload-test
src/gigman/: __init__.py  __main__.py  app.py  display.py  gitignore.py  keyboard.py  logger.py  manager.py  parse.py  provider.py  section.py  template.py  ui.py
src/gigman/tests/: test_managing.py  test_providing.py  test_ui.py
