[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gigman"
version = "0.0.8"
dependencies = [
    "importlib-resources==5.9.0",
]
authors = [
  { name="Rex Garland", email="rex@rexgarland.dev" },
]
description = "a no-nonsense gitignore manager"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
gigman = "gigman:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gigman.data" = ["*.gitignore"]

